--- a/static/css/link.css
+++ b/static/css/link.css
@@ -1,6 +1,6 @@
 .linkButton > a > .buttonicon
 {
-    background-image: url('/static/plugins/ep_link/static/images/link.png');
+    background-image: url('../images/link.png');
 }
 
 .modal .modal-body .error
